<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DIEGO BARBER</string>
    <string name="title_activity_login">Se connecter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Se connecter ou Incription</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_email">Email Invalide</string>
    <string name="error_invalid_password">Mot de passe Trop court</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Ce champs est requis</string>
    <string name="permission_rationale">"Les autorisations de contacts sont nécessaires pour fournir le courrier électronique
        finitions."
    </string>
    <string name="cliquez_sur_moi">Cliquez sur moi</string>
    <string name="name">Nom</string>
    <string name="logo">logo</string>
    <string name="client">client</string>
    <string name="product">Produit</string>
    <string name="sales">Ventes</string>
    <string name="details">details</string>
    <string name="search_product">Rechercher un produit</string>
    <string name="title_activity_synchro_client">Synchro Client</string>
    <string name="tape_customer_s_name">Entrez le nom du client</string>
    <string name="customertel">Telephone</string>
    <string name="customername">Nom</string>
    <string name="customerquater">Quartier</string>
    <string name="find_customer">Rechercher un client</string>
    <string name="productsales">Produit</string>
    <string name="qte">Qte</string>
    <string name="validate">Valider</string>
    <string name="amount">Montant</string>
    <string name="total">Total</string>
    <string name="grand_total">Grand Total</string>
    <string name="validate2">Valider</string>
    <string name="welcome_to_comone_sales_force">Snack Point de vente</string>
    <string name="enter_your_sales_code">Entrez bar</string>
    <string name="start_your_sales">Demmarrer la vente</string>
    <string name="importing_your_loading">Chargement ... ...</string>
    <string name="refresh_customer_s_list">Raffraichir la liste</string>
    <string name="continuecomone">NOUVELLE COMMANDE</string>
    <string name="enter_sale_s_code">Entrer le bar</string>
    <string name="transport">Transport</string>
    <string name="empties">Emballage</string>
    <string name="register">Enregistrer</string>
    <string name="search_your_data">Rechercher les données</string>
    <string name="import_loading">Chargement ...</string>
    <string name="save_print"><![CDATA[Save & Print]]></string>
    <string name="cancel">Annuler</string>
    <string name="return22">Retour</string>
    <string name="add">Ajouter</string>
    <string name="view">Vue</string>
    <string name="domain_s_name">Url du site</string>
    <string name="enterprise_s_name">Nom entreprise</string>
    <string name="depot_s_name">Depot</string>
    <string name="driver_s_code">Code vendeur</string>
    <string name="printer_s_name">Nom Imprimante</string>
    <string name="setting">Configuration</string>
    <string name="backup_your_sales">Sauvegarder</string>
    <string name="initialise_sales">Initialiser la vente</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Configuration</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="help">Help</string>
    <string name="list_all_receipt">Liste des recus</string>
    <string name="driver_s_name">Nom du vendeur</string>
    <string name="wifi">wifi</string>
    <string name="synchro_s_time">Temps de synchro</string>
    <string name="close_all">Tout Fermer</string>
    <string name="print">Imprimer</string>
    <string name="show_stock">Visu Stock</string>
    <string name="delete_receipt">Supprimer un recu</string>
    <string name="search">Rechercher...</string>
    <string name="enter_receipt_s_android_string_emptyphonenumber">Enter Receipt\'s @android:string/emptyPhoneNumber</string>
    <string name="enter_receipt_s_number">No recu</string>
    <string name="manage_receipt">Gestion des recus</string>
    <string name="max_sales">Max Sales</string>
    <string name="load_product">CHARGEMENT DES PRODUITS</string>
    <string name="load_customers">Chargement des clients</string>
    <string name="enterprise">DIEGO BARBER</string>
    <string name="title_activity_list_invoices">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_scanned_barcode2">ScannedBarcodeActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Nofact">No Facture</string>
</resources>
