<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SalesInvoice">

    <EditText
        android:id="@+id/edtsalesqte"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edtsalesprod"
        android:layout_alignStart="@+id/listvdet"
        android:layout_alignLeft="@+id/listvdet"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:width="100dp"
        android:ems="10"
        android:hint="Qte"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtsalesprod"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <Button
        android:id="@+id/btnvalidate"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/view"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtsalesprice" />

    <Button
        android:id="@+id/btnregister"
        style="@android:style/Widget.Button"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/edtsalesprice"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:text="Ajouter"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/edtsalesprice"
        app:layout_constraintTop_toBottomOf="@+id/edtsalesprod"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:id="@+id/imgbtnprod"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_above="@+id/edtsalesprice"
        android:layout_alignEnd="@+id/btnregister"
        android:layout_alignRight="@+id/btnregister"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtsalescust3"
        app:srcCompat="@drawable/find32"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <EditText
        android:id="@+id/edtsalesprod"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edtsalescust"
        android:layout_alignStart="@+id/edtsalesqte"
        android:layout_alignLeft="@+id/edtsalesqte"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/productsales"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imgbtnprod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtsalescust2"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:id="@+id/imgbtncust"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_above="@+id/edtsalesprod"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/find_customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/find32"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/edtsalescust"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/edtsalesprod"
        android:layout_alignLeft="@+id/edtsalesprod"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/customername"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/edtnofact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtnofact"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/edtsalesprod"
        android:layout_alignLeft="@+id/edtsalesprod"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/Nofact"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imgbtncust"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtsalescust2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/edtsalesprod"
        android:layout_alignLeft="@+id/edtsalesprod"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/customertel"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtsalescust" />

    <EditText
        android:id="@+id/edtsalescust3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/edtsalesprod"
        android:layout_alignLeft="@+id/edtsalesprod"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/customerquater"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtsalescust2"
        app:layout_constraintTop_toBottomOf="@+id/imgbtncust" />

    <EditText
        android:id="@+id/edtsalesprice"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/edtsalesqte"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="44dp"
        android:width="100dp"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edtsalesqte"
        app:layout_constraintTop_toBottomOf="@+id/edtsalesprod"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <ListView
        android:id="@+id/listvdet"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignEnd="@+id/btnregister"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edtsalesqte"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnvalidate"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/btnregister" />

    <CheckBox
        android:id="@+id/chkglace"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:checked="true"
        android:text="Glacé"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/btnregister"
        app:layout_constraintStart_toEndOf="@+id/edtsalesprice"
        app:layout_constraintTop_toBottomOf="@+id/edtsalesprod" />

</androidx.constraintlayout.widget.ConstraintLayout>
